--- a/styles.css
+++ b/styles.css
@@ -276,7 +276,7 @@ section {
     background-color: rgb(108, 99, 255, 0.2);
     color: var(--primary-color);
     border-radius: 5px;
-    font-size: 9rem;
+    font-size: 0.9rem;
     margin-bottom: 1rem;
 }
 
@@ -301,9 +301,9 @@ section {
 
 .skills li {
     background-color: var(--darker-bg);
-    padding: .3rem 8rem;
+    padding: .3rem 0.8rem;
     border-radius: 20px;
-    font-size: 8rem;
+    font-size: 0.8rem;
 }
 
 .projects-container {
@@ -329,6 +329,8 @@ section {
 
 .project-img {
     overflow: hidden;
+    width: 45%;
+    margin: 0 auto;
 }
 .project-img img {
     width: 100%;
@@ -355,7 +357,7 @@ section {
     flex-grow: 1;
     color: var(--gray-text);
     margin-bottom: 1rem;
-    font-size: 95rem;
+    font-size: 0.95rem;
 }
 
 .project-tech {
@@ -370,7 +372,7 @@ section {
     color: var(--primary-color);
     padding: .3rem .8rem;
     border-radius: 5px;
-    font-size: 9rem;
+    font-size: 0.9rem;
 }
 
 .project-links {
