--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     --gray-text: #aaaaaa;
     --card-bgf: #1e1e1e;
     --border-color: #2d2d2d;
-    -o-transition: all .3s ease;
+    --transition: all .3s ease;
 }
 *
 {
@@ -112,8 +112,8 @@ section {
 .section-title {
     text-align: center;
     margin-bottom: 3rem;
-    front-size: 2rem;
-    posittion: relative;
+    font-size: 2rem;
+    position: relative;
     padding-bottom: 1rem;
 }
 
@@ -186,7 +186,7 @@ section {
 
 .social-links {
     display: flex;
-    gap: 1.rem;
+    gap: 1rem;
     margin-bottom: 2rem;
 }
 
@@ -313,7 +313,7 @@ section {
 }  
 
 .project-card {
-    background-color: var(--card-bg);
+    background-color:var(--card-bgf);
     border-radius: 10px;
     overflow: hidden;
     height: 100%;
@@ -418,4 +418,26 @@ footer {
     .hero-content, .nav-links {
         flex-direction: column;
     }
+}
+
+#particles-js {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background: #111;
+}
+
+
+#rubik-bg {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+}
+#rubik-bg canvas {
+    display: block;
 }
