--- a/styles.css
+++ b/styles.css
@@ -277,7 +277,7 @@ section {
     font-size: 0.9rem;
     display: inline-block;
     padding: .3rem .8rem;
-    background-color: rgb(108, 99, 255, 0.2);
+    background-color: #6c63ff33;
     color: var(--primary-color);
     border-radius: 5px;
     font-size: 0.9rem;
